<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_menu_bar"
        android:title="@string/menu"
        app:cnb_iconColor="@color/main_color" />
    <item
        android:id="@+id/shopping"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/shopping"
        app:cnb_iconColor="@color/main_color" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_bar"
        android:title="@string/home"
        app:cnb_iconColor="@color/main_color" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart"
        app:cnb_iconColor="@color/main_color" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_bar"
        android:title="@string/profile"
        app:cnb_iconColor="@color/main_color" />

</menu>

