<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentaion.ui.splash.SplashActivity">

        <ImageView
            android:id="@+id/iv_back_splash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_splash_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/splash_background"/>
        <ImageView
            android:id="@+id/iv_logo_splash"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/iv_logo"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo_splash"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_10sdp"
            >
        <TextView
            android:id="@+id/tv_meal_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/unicorn_regular"
            android:text="@string/bayti"
            android:textSize="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:textColor="@color/secondary_color"
           />

        <TextView

            android:id="@+id/tv_delivery_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textSize="@dimen/_60sdp"
            android:fontFamily="@font/unicorn_regular"
            android:layout_marginStart="@dimen/_2sdp"
            android:textColor="@color/main_color"

            />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>