<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:fitsSystemWindows="true"
        tools:context=".presentation.ui.resetPassword.ResetPasswordActivity">

        <TextView
            android:id="@+id/tv_main_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/metropolis_extra_bold"
            android:gravity="center"
            android:text="@string/reset_password_header"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hearDescription_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_regular"
            android:gravity="center"
            android:lineHeight="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_40sdp"
            android:text="@string/enter_your_phone_number_to_get_verification_code"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_reset"
            tools:targetApi="p" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_sign_phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hearDescription_reset"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke_et"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textAlignment="viewStart"
                android:textColor="@color/primary_color"
                android:imeOptions="actionSend"
                android:textSize="@dimen/_12sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_sendCode_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@drawable/stroke_bt"
            android:fontFamily="@font/metropolis_regular"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_phone_layout"
            app:layout_constraintVertical_bias="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>