<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.MenuFragment"
        android:background="#FFFFFF">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_35sdp">

                <TextView
                    android:id="@+id/MainTxtWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:text="@string/menu"
                    android:textColor="#4A4B4D"
                    android:textSize="@dimen/_25sdp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/ic_cart_menu"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:src="@drawable/ic_shopping_cart"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>

            <TextView
                android:id="@+id/et_search_men"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/back_button"
                android:hint="@string/search_here"
                android:paddingStart="@dimen/_30sdp"
                tools:ignore="RtlSymmetry" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_50sdp">

                <RelativeLayout
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="0dp"
                    android:layout_alignBottom="@+id/rv_typeOrder_menu"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/back_menu" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_typeOrder_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</layout>