<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        tools:context=".ui.fragments.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/layout_mainPage_home"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/tv_welcome_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/welcome"
                        android:textColor="#4A4B4D"
                        android:textSize="@dimen/_20sdp"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:id="@+id/ic_cart_home"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_shopping_cart" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/delivering_to"
                    android:textColor="#9FA0A0"
                    android:textSize="@dimen/_13sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:text="@string/current_location"
                        android:textColor="#302A3A"
                        android:textSize="@dimen/_17sdp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/et_search_home"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/back_button"
                    android:gravity="center_vertical"
                    android:hint="@string/search_here"
                    android:paddingStart="@dimen/_30sdp"
                    tools:ignore="RtlSymmetry" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_typeShop_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_2sdp" />

                <!-- Start To Popular Restaurants  -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/view_all"
                        android:textColor="#FF5722"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:text="@string/popular_restaurants"
                        android:textColor="#302A3A"
                        android:textSize="@dimen/_20sdp"
                        tools:ignore="RtlHardcoded" />


                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_185sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:elevation="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_15sdp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFF">

                        <ImageView
                            android:id="@+id/Product1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_120sdp"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:contentDescription="@string/todo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/im2"
                            android:transitionName="Big"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_namePopular_home"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:paddingStart="@dimen/_15sdp"
                            android:text="@string/name_fast_food"
                            android:textAlignment="textStart"
                            android:textColor="#302A3A"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/Product1"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/Direcsh1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:paddingStart="@dimen/_1sdp"
                            android:text="(124 ratings) Café - Western Food"
                            android:textAlignment="textStart"
                            android:textColor="#65616D"
                            android:textSize="@dimen/_10sdp"
                            app:layout_constraintStart_toEndOf="@+id/Price1"
                            app:layout_constraintTop_toBottomOf="@+id/tv_namePopular_home"
                            tools:ignore="HardcodedText,RtlSymmetry" />

                        <TextView
                            android:id="@+id/Price1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="4.9"
                            android:textColor="#E76C45"
                            app:layout_constraintStart_toEndOf="@+id/imageView41"
                            app:layout_constraintTop_toBottomOf="@+id/tv_namePopular_home"
                            tools:ignore="HardcodedText" />

                        <ImageView
                            android:id="@+id/imageView41"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/ic_star"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_namePopular_home"
                            tools:ignore="ContentDescription" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <!-- End To Popular Restaurants  -->

                <!-- Start To Popular Most  -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/view_all"
                        android:textColor="#FF5722"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/popular_most"
                        android:textColor="#302A3A"
                        android:textSize="@dimen/_20sdp" />


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popularMost_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp" />
                <!-- End To Popular Most  -->


                <!-- Start To Recent Items  -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/view_all"
                        android:textColor="#FF5722"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/recent_items"
                        android:textColor="#302A3A"
                        android:textSize="@dimen/_20sdp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recentItems_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp" />
                <!-- End To Recent Items  -->


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    tools:ignore="UselessLeaf" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>